--- a/static/styles.css
+++ b/static/styles.css
@@ -18,16 +18,14 @@ body {
     box-sizing: border-box;
 }
 
-.header-text {
+.header-text, .footer-text {
     font-size: 24px;
     font-weight: bold;
     color: gold;
+    margin: 0;
 }
 
 .footer-text {
-    font-size: 24px;
-    font-weight: bold;
-    color: gold;
     text-align: center;
     width: 100%;
 }
@@ -48,37 +46,33 @@ body {
 .container {
     display: flex;
     justify-content: space-between;
-    padding: 20px;
+    padding: 0;
     flex: 1;
     box-sizing: border-box;
 }
 
-.left-content, .right-content {
+.left-content, .main-content, .right-content {
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.main-content {
-    flex: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    padding: 10px;
+    width: 33%; /* Ensure each column takes up 33% of the width */
 }
 
 label {
     display: block;
-    margin: 10px 0 5px;
+    margin: 10px 0;
+    font-size: 16px;
 }
 
 select, button {
     padding: 10px;
-    margin: 5px 0;
+    margin: 10px 0;
     width: 100%;
     max-width: 300px;
+    font-size: 16px;
 }
 
 button {
@@ -95,19 +89,22 @@ button:hover {
 #result img {
     max-width: 100%;
     height: auto;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .percentages p {
     color: maroon;
     font-weight: bold;
+    margin: 10px 0;
+    font-size: 16px;
+    text-align: center; /* Center the text */
 }
 
 .button-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .charts {
@@ -115,6 +112,11 @@ button:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.charts img {
+    width: 100%; /* Increased the width slightly */
+    margin: 0;
 }
 
 /* Modal styles */
