Final commit, update README.md

--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
             <h2>Information</h2>
             <p>Credits: Jacob Tocila, Calvin University Hackathon 2025</p>
             <p>Bible Verse: "There is neither Jew nor Greek, slave nor free, male nor female, for you are all one in Christ Jesus." - Galatians 3:28</p>
-            <p>Tech Stack: This application is built using Flask, Pandas, Matplotlib, and JavaScript. Hosted with Azure.</p>
+            <p>Tech Stack: This application is built using Flask, Pandas, Matplotlib, Python, and JavaScript. Hosted with Azure. I acquired an anonymized dataset from Calvin Admissions.</p>
         </div>
     </div>
 
